Add style to main description

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 
     <!--Introductory Page-->
-    <div id="main-image">
-        <div>
+    <div id="main-image" class="main-description">
+        <div class="main-jedi">
             <h1> STAR WARS: The JEDI Order</h1>
             <p>The Jedi Order is a group of individuals sensitive to the Force and is governed by the Jedi code.</p>
             <p>They are trained and live in the ways of the Force</p>
             <p>Learn more about the JEDI ranks and discover your own self</p>
         </div>
-        <div>
+        <div class="main-hi">
             <h1>May the Force be With You!</h1>
         </div>
         <div class="controls">
