Add css and js description

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>May the Force be With You!</h1>
         </div>
         <div class="controls">
-            <button class="next">Enter</button>
+            <button class="enter" onclick="myFunction()">Enter</button>
         </div>
     </div>
 
