Try on code for the main page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Quiz Area-->
-    <div class="quiz-container">
+    <div class="quiz-container" id="quizzes">
         <div class="title">Ultimate Jedi Quiz</div>
         <div id="question" class="question"></div>
         <label class="option">
